add information on senses in index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
 <!DOCTYPE html>
 <html>
-<h1>Hello World in Berlin!</h1>
-
+<head></head>
+<body>
+<h1>information processing unit</h1>
+<p>It is here where all kinds and amounts of information are processed and stored</P>
+	<h1>Sight</h1>
+		<p>Especialized in absorbing visual information, among its activities are:</p>
+		<ul>
+			<li>movies</li>
+			<li>books</li>
+			<li>colors</li>
+			<li>art</li>
+			<li>photography</li>
+		</ul>
+	<h1></h1>
+</body>
 </html>
