--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <head></head>
 <body>
+<h1 style="color:green">The User Experience Designer</h1>	
 <h1>information processing unit</h1>
-<p>It is here where all kinds and amounts of information are processed and stored</P>
+<p>It is here where all kinds and amounts of information are processed and stored.
+This unit is also in charge of decision-making</P>
 	<h1>Sight</h1>
-		<p>Especialized in absorbing visual information, among its activities are:</p>
+		<p>Input unit especialized in absorbing visual information, among its activities are:</p>
 		<ul>
 			<li>movies</li>
 			<li>books</li>
@@ -13,6 +15,14 @@
 			<li>art</li>
 			<li>photography</li>
 		</ul>
-	<h1></h1>
+	<h1>Hearing</h1>
+	<p>Auditive information input. some of its tasks are:</p>
+	<ul>
+		<li>music</li>
+		<li>conversations</li>
+		<li>equilibrium</li>
+		<li>location and spatial relationships</li>
+		<li>communication</li>
+	</ul>
 </body>
 </html>
