add title and change font face to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head></head>
 <body>
-<h1 style="color:green">The User Experience Designer</h1>	
+<h1 style="color:green; font-face:futura">The User Experience Designer</h1>	
 <h1>information processing unit</h1>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making</P>
