add title and change font family and added more infox

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head></head>
 <body>
-<h1 style="color:green; font-face:futura">The User Experience Designer</h1>	
-<h1>information processing unit</h1>
+<h1 style="color:green; font-family:futura">The User Experience Designer</h1>	
+<h2>information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making</P>
-	<h1>Sight</h1>
+	<h2>Sight</h2>
 		<p>Input unit especialized in absorbing visual information, among its activities are:</p>
 		<ul>
 			<li>movies</li>
@@ -15,7 +15,7 @@ This unit is also in charge of decision-making</P>
 			<li>art</li>
 			<li>photography</li>
 		</ul>
-	<h1>Hearing</h1>
+	<h2>Hearing</h2>
 	<p>Auditive information input. some of its tasks are:</p>
 	<ul>
 		<li>music</li>
@@ -23,6 +23,22 @@ This unit is also in charge of decision-making</P>
 		<li>equilibrium</li>
 		<li>location and spatial relationships</li>
 		<li>communication</li>
+	</ul>
+	<h2>nose</h2>
+	<ul>
+		<li>aromas</li>
+	</ul>
+	<h2>mouth</h2>
+	<ul>
+		<li>food</li>
+		<li>drinks</li>
+	</ul>
+	<h2>tactile</h2>
+	<ul>
+		<li>write</li>
+		<li>draw</li>
+		<li>paint</li>
+		<li>code</li>
 	</ul>
 </body>
 </html>
