--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head></head>
 <body>
-<h1 style="color:green; font-family:futura">The User Experience Designer</h1>	
+<h1 style="color:green; font-family:futura">The User Experience Designer</h1>
+<img src="https://www.flickr.com/photos/hitthestreet/9173601559/in/photostream/">	
 <h2>information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making</P>
