--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
 <h1 style="color:green; font-family:futura">The User Experience Designer</h1>
-<img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_s.jpg">	
+<a href="peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
 <h2>information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making</P>
