corrected the external link

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <body>
 <h1 style="color:green; font-family:futura">The User Experience Designer</h1>
 <h2 style="color:white; font-family:futura; background-color:black">AKA Alejandro Morales</h2>
-<h2 style="color:white; font-family:futura; background-color:black">AKA Multitool, multitalented, multiskilled problem solver</h2>
-<a href="peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
+<h2 style="color:white; font-family:futura; background-color:black">AKA Monstertool, multitalented, multiskilled problem solver</h2>
+<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
 <h2>information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making</P>
