more interests added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
 <a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
 <h2>information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
-This unit is also in charge of decision-making</P>
+This unit is also in charge of decision-making.
+Interested in:</P>
+<ul>
+	<li>User Experience Design</li>
+	<li>Creativity</li>
+	<li>Art</li>
+	<li>How things work</li>
+	<li>Where ideas come from</li>
+	<li>Why we create</li>
+
+</ul>
 	<h2>Sight</h2>
 		<p>Input unit especialized in absorbing visual information, among its activities are:</p>
 		<ul>
