added two folders for coffee and blog as well as their respective index files

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <h2 style="color:white; font-family:futura; background-color:black">AKA Alejandro Morales</h2>
 <h2 style="color:white; font-family:futura; background-color:black">AKA Monstertool, multitalented, multiskilled problem solver</h2>
 <a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
-<h2>information processing unit</h2>
+<h2>Information processing unit</h2>
 <p>It is here where all kinds and amounts of information are processed and stored.
 This unit is also in charge of decision-making.
 Interested in:</P>
@@ -37,23 +37,23 @@ Interested in:</P>
 		<li>location and spatial relationships</li>
 		<li>communication</li>
 	</ul>
-	<h2>nose</h2>
+	<h2>smell</h2>
 	<ul>
 		<li>aromas</li>
 	</ul>
-	<h2>mouth</h2>
+	<h2>taste and speech</h2>
 	<ul>
 		<li>food</li>
 		<li>drinks</li>
 	</ul>
-	<h2>tactile</h2>
+	<h2>Tact</h2>
 	<ul>
 		<li>write</li>
 		<li>draw</li>
 		<li>paint</li>
 		<li>code</li>
 	</ul>
-	<h2>legs</h2>
+	<h2>legs and feet</h2>
 	<ul>
 		<li>travel</li>
 		<li>swim</li>
