new css linked from index files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+	<link href="stylesheet.css" rel="Stylesheet" type="text/css" />
+</head>
 <body>
 <h1 style="color:green; font-family:futura">The User Experience Designer</h1>
 <h2 style="color:white; font-family:futura; background-color:black">AKA Alejandro Morales</h2>
