--- a/Coffee/index.html
+++ b/Coffee/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 	<head>
+		<link href="stylesheet.css" rel="Stylesheet" type="text/css" />
 	</head>
 	<body>
 		<header>Dream Beans Caffee</header>
