--- a/coffee/index.html
+++ b/coffee/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link href="style.css" rel="Stylesheet" type="text/css" />
+		<link href='http://fonts.googleapis.com/css?family=Fjalla+One|Vibur' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<header>Dream<br />BEANS<br />CAFFEE</header>
