--- a/coffee/index.html
+++ b/coffee/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 	<head>
+		<title>CAFFEE</title>
 		<meta charset="utf-8"/>
 		<link href="style.css" rel="Stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Fjalla+One|Vibur' rel='stylesheet' type='text/css'>
