--- a/coffee/index.html
+++ b/coffee/index.html
@@ -7,7 +7,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Fjalla+One|Vibur' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<header>Dream<br />BEANS<br />CAFFEE</header>
+		<div id="header"><span id="dream">dream</span><span id="beanscaffee"><br />BEANS<br />CAFFEE</span></div>
 		<nav>
 			<a href="">about</a>
 			<a href="">beans</a>
