chaged all id to classes in the html and extended de css

--- a/coffee/index.html
+++ b/coffee/index.html
@@ -4,6 +4,7 @@
 		<title>CAFFEE</title>
 		<meta charset="utf-8"/>
 		<link href="style.css" rel="Stylesheet" type="text/css" />
+		<link href="normalize.css" rel="Stylesheet" type="text/css" />
 		<link href='http://fonts.googleapis.com/css?family=Fjalla+One|Vibur' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
