--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link href="stylesheet.css" rel="Stylesheet" type="text/css" />
+	<meta charset="utf-8"/>
+	<title>U.X. - MAKING GREAT THINGS POSSIBLE</title>
+	<link href="mystyle.css" rel="Stylesheet" type="text/css" />
+	<link href='http://fonts.googleapis.com/css?family=Codystar|Monoton' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<h1 style="color:green; font-family:futura">The User Experience Designer</h1>
+<h1 style="color:green; font-family:'Monoton', cursive; font-size:40pt; background-color:black"> The User Experience Designer</h1>
 <h2 style="color:white; font-family:futura; background-color:black">AKA Alejandro Morales</h2>
 <h2 style="color:white; font-family:futura; background-color:black">AKA Monstertool, multitalented, multiskilled problem solver</h2>
 <a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
