arranged the index and created a css

--- a/index.html
+++ b/index.html
@@ -1,69 +1,91 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8"/>
-	<title>U.X. - MAKING GREAT THINGS POSSIBLE</title>
-	<link href="mystyle.css" rel="Stylesheet" type="text/css" />
-	<link href='http://fonts.googleapis.com/css?family=Codystar|Monoton' rel='stylesheet' type='text/css'>
-</head>
-<body>
-<h1 style="color:green; font-family:'Monoton', cursive; font-size:40pt; background-color:black"> The User Experience Designer</h1>
-<h2 style="color:white; font-family:futura; background-color:black">AKA Alejandro Morales</h2>
-<h2 style="color:white; font-family:futura; background-color:black">AKA Monstertool, multitalented, multiskilled problem solver</h2>
-<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
-<h2>Information processing unit</h2>
-<p>It is here where all kinds and amounts of information are processed and stored.
-This unit is also in charge of decision-making.
-Interested in:</P>
-<ul>
-	<li>User Experience Design</li>
-	<li>Creativity</li>
-	<li>Art</li>
-	<li>How things work</li>
-	<li>Where ideas come from</li>
-	<li>Why we create</li>
+	<head>
+		<meta charset="utf-8">
+		<title>U.X. - MAKING GREAT THINGS POSSIBLE</title>
+		<link href="normalize.css" rel="Stylesheet" type="text/css">
+		<link href='http://fonts.googleapis.com/css?family=Codystar|Monoton' rel='stylesheet' type='text/css'>
+		<link href="mystyle.css" rel="Stylesheet" type="text/css">
+	</head>
+	<body>
+		<header>
+			<h1> The User Experience Designer</h1>
+			<h2>AKA Alejandro Morales</h2>
+			<h2>AKA Monstertool, multitalented, multiskilled problem solver</h2>
+			<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
+		</header>
+		<div class="content">
+			<article>
+				<h2>Information processing unit</h2>
+				<p>It is here where all kinds and amounts of information are processed and stored.
+				This unit is also in charge of decision-making.
+				Interested in:</P>
+				<ul>
+					<li>User Experience Design</li>
+					<li>Creativity</li>
+					<li>Art</li>
+					<li>How things work</li>
+					<li>Where ideas come from</li>
+					<li>Why we create</li>
 
-</ul>
-	<h2>Sight</h2>
-		<p>Input unit especialized in absorbing visual information, among its activities are:</p>
-		<ul>
-			<li>movies</li>
-			<li>books</li>
-			<li>colors</li>
-			<li>art</li>
-			<li>photography</li>
-		</ul>
-	<h2>Hearing</h2>
-	<p>Auditive information input. some of its tasks are:</p>
-	<ul>
-		<li>music</li>
-		<li>conversations</li>
-		<li>equilibrium</li>
-		<li>location and spatial relationships</li>
-		<li>communication</li>
-	</ul>
-	<h2>smell</h2>
-	<ul>
-		<li>aromas</li>
-	</ul>
-	<h2>taste and speech</h2>
-	<ul>
-		<li>food</li>
-		<li>drinks</li>
-	</ul>
-	<h2>Tact</h2>
-	<ul>
-		<li>write</li>
-		<li>draw</li>
-		<li>paint</li>
-		<li>code</li>
-	</ul>
-	<h2>legs and feet</h2>
-	<ul>
-		<li>travel</li>
-		<li>swim</li>
-		<li>scuba dive</li>
-		<li>ride a bike</li>
-	</ul>
-</body>
+				</ul>
+			</article>
+			<article>
+				<h2>Sight</h2>
+					<p>Input unit especialized in absorbing visual information, among its activities are:</p>
+					<ul>
+						<li>movies</li>
+						<li>books</li>
+						<li>colors</li>
+						<li>art</li>
+						<li>photography</li>
+					</ul>
+			</article>
+			<article>
+				<h2>Hearing</h2>
+				<p>Auditive information input. some of its tasks are:</p>
+				<ul>
+					<li>music</li>
+					<li>conversations</li>
+					<li>equilibrium</li>
+					<li>location and spatial relationships</li>
+					<li>communication</li>
+				</ul>
+			</article>
+			<article>
+				<h2>smell</h2>
+				<ul>
+					<li>aromas</li>
+				</ul>
+			</article>
+			<article>
+				<h2>taste and speech</h2>
+				<ul>
+					<li>food</li>
+					<li>drinks</li>
+				</ul>
+			</article>
+			<article>
+				<h2>Tact</h2>
+				<ul>
+					<li>write</li>
+					<li>draw</li>
+					<li>paint</li>
+					<li>code</li>
+				</ul>
+			</article>
+			<article>
+				<h2>legs and feet</h2>
+				<ul>
+					<li>travel</li>
+					<li>swim</li>
+					<li>scuba dive</li>
+					<li>ride a bike</li>
+				</ul>
+			</article>
+		</div>	
+		<footer>
+			<p>© ALEJANDRO MORALES 2014</p>
+		</footer>
+	</body>
 </html>
