changed the css style of the index

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<title>U.X. - MAKING GREAT THINGS POSSIBLE</title>
-		<link href="normalize.css" rel="Stylesheet" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Codystar|Monoton' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+		<link href="normalize.css" rel="Stylesheet" type="text/css">
 		<link href="mystyle.css" rel="Stylesheet" type="text/css">
 	</head>
 	<body>
 		<header>
 			<h1> The User Experience Designer</h1>
+			<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>
 			<h2>AKA Alejandro Morales</h2>
 			<h2>AKA Monstertool, multitalented, multiskilled problem solver</h2>
-			<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>	
+				
+			<div class="clear">
 		</header>
 		<div class="content">
 			<article>
@@ -83,9 +86,11 @@
 					<li>ride a bike</li>
 				</ul>
 			</article>
+			<div class="clear">
+			</div>
 		</div>	
 		<footer>
-			<p>© ALEJANDRO MORALES 2014</p>
+			<p>© alejandro morales 2014</p>
 		</footer>
 	</body>
 </html>
