--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>U.X. - MAKING GREAT THINGS POSSIBLE</title>
+		<title>U.X. - MAKE THINGS HAPPEN</title>
 		<link href='http://fonts.googleapis.com/css?family=Codystar|Monoton' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 		<link href="normalize.css" rel="Stylesheet" type="text/css">
@@ -10,82 +10,84 @@
 	</head>
 	<body>
 		<header>
-			<h1> The User Experience Designer</h1>
-			<a href="http://peopleofberlin.wordpress.com"><img src="https://farm6.staticflickr.com/5275/14177111862_d86c79c05b_n.jpg"></a>
-			<h2>AKA Alejandro Morales</h2>
-			<h2>AKA Monstertool, multitalented, multiskilled problem solver</h2>
+			<h1> Who's this funky guy?</h1>
+			<a href="http://peopleofberlin.wordpress.com"><img src="img/am.jpg"></a>
+			<h2>The one that makes things happen</h2>
+			<h2>Mr. Alejandro Morales</h2>
 				
 			<div class="clear">
 		</header>
 		<div class="content">
-			<article>
-				<h2>Information processing unit</h2>
-				<p>It is here where all kinds and amounts of information are processed and stored.
-				This unit is also in charge of decision-making.
-				Interested in:</P>
-				<ul>
-					<li>User Experience Design</li>
-					<li>Creativity</li>
-					<li>Art</li>
-					<li>How things work</li>
-					<li>Where ideas come from</li>
-					<li>Why we create</li>
-
-				</ul>
-			</article>
-			<article>
-				<h2>Sight</h2>
-					<p>Input unit especialized in absorbing visual information, among its activities are:</p>
+			<ul>
+				<li>
+					<h2>Information processing unit</h2>
+					<p>All kinds and amounts of information are processed and stored here.
+					This unit is in charge of decision-making.
+					Interested in:</P>
 					<ul>
-						<li>movies</li>
-						<li>books</li>
-						<li>colors</li>
-						<li>art</li>
-						<li>photography</li>
+						<li>User Experience Design</li>
+						<li>Creativity</li>
+						<li>Art</li>
+						<li>How things work</li>
+						<li>Where ideas come from</li>
+						<li>Why we create</li>
+
 					</ul>
-			</article>
-			<article>
-				<h2>Hearing</h2>
-				<p>Auditive information input. some of its tasks are:</p>
-				<ul>
-					<li>music</li>
-					<li>conversations</li>
-					<li>equilibrium</li>
-					<li>location and spatial relationships</li>
-					<li>communication</li>
-				</ul>
-			</article>
-			<article>
-				<h2>smell</h2>
-				<ul>
-					<li>aromas</li>
-				</ul>
-			</article>
-			<article>
-				<h2>taste and speech</h2>
-				<ul>
-					<li>food</li>
-					<li>drinks</li>
-				</ul>
-			</article>
-			<article>
-				<h2>Tact</h2>
-				<ul>
-					<li>write</li>
-					<li>draw</li>
-					<li>paint</li>
-					<li>code</li>
-				</ul>
-			</article>
-			<article>
-				<h2>legs and feet</h2>
-				<ul>
-					<li>travel</li>
-					<li>swim</li>
-					<li>scuba dive</li>
-					<li>ride a bike</li>
-				</ul>
-			</article>
+				</li>
+				<li>
+					<h2>Sight</h2>
+						<p>Input unit especialized in absorbing visual information, among its activities are:</p>
+						<ul>
+							<li>movies</li>
+							<li>books</li>
+							<li>colors</li>
+							<li>art</li>
+							<li>photography</li>
+						</ul>
+				</li>
+				<li>
+					<h2>Hearing</h2>
+					<p>Auditive information input. some of its tasks are:</p>
+					<ul>
+						<li>music</li>
+						<li>conversations</li>
+						<li>equilibrium</li>
+						<li>location and spatial relationships</li>
+						<li>communication</li>
+					</ul>
+				</li>
+				<li>
+					<h2>smell</h2>
+					<ul>
+						<li>aromas</li>
+					</ul>
+				</li>
+				<li>
+					<h2>taste and speech</h2>
+					<ul>
+						<li>food</li>
+						<li>drinks</li>
+					</ul>
+				</li>
+				<li>
+					<h2>Tactile</h2>
+					<ul>
+						<li>write</li>
+						<li>draw</li>
+						<li>paint</li>
+						<li>code</li>
+					</ul>
+				</li>
+				<li>
+					<h2>legs and feet</h2>
+					<ul>
+						<li>travel</li>
+						<li>swim</li>
+						<li>scuba dive</li>
+						<li>ride a bike</li>
+					</ul>
+				</li>
+			</ul>
 			<div class="clear">
 			</div>
 		</div>	
