--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</header>
 		<div class="content">
 			<ul>
-				<li>
+				<li class="article">
 					<h2>Information processing unit</h2>
 					<p>All kinds and amounts of information are processed and stored here.
 					This unit is in charge of decision-making.
@@ -34,7 +34,7 @@
 
 					</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>Sight</h2>
 						<p>Input unit especialized in absorbing visual information, among its activities are:</p>
 						<ul>
@@ -45,7 +45,7 @@
 							<li>photography</li>
 						</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>Hearing</h2>
 					<p>Auditive information input. some of its tasks are:</p>
 					<ul>
@@ -56,20 +56,20 @@
 						<li>communication</li>
 					</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>smell</h2>
 					<ul>
 						<li>aromas</li>
 					</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>taste and speech</h2>
 					<ul>
 						<li>food</li>
 						<li>drinks</li>
 					</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>Tactile</h2>
 					<ul>
 						<li>write</li>
@@ -78,7 +78,7 @@
 						<li>code</li>
 					</ul>
 				</li>
-				<li>
+				<li class="article">
 					<h2>legs and feet</h2>
 					<ul>
 						<li>travel</li>
